--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -1,1 +1,360 @@
-Hello Alexxx!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Modern Business - Start Bootstrap Template</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="{{ url_for('static', filename='modern-business.css') }}" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="{{ url_for('static', filename='font-awesome/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+
+    <nav class="navbar navbar-default navbar-static-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img class="brand-logo img-responsive" alt="Brand" src="img/entradascomlogo.png">
+                </a>
+                <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item login-option signup-link mobile" data-toggle="modal" data-target="#signup-modal">
+                    <span class="glyphicon glyphicon-user">
+                </button>
+                <button type="button" class="navbar-toggle btn btn-yellow navbar-btn last-navbar-item logged sign-out mobile">
+                    <span class="glyphicon glyphicon-off">
+                </button>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+
+                <!-- Sign up/in button -->
+
+                <li>
+                    <!-- Trigger the modal with a button -->
+                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option signup-link desktop" data-toggle="modal" data-target="#signup-modal">
+                        <span class="glyphicon glyphicon-user"></span>Entrar
+                    </button>
+                </li>
+
+                <!-- Exit button -->
+
+                <li><p class="navbar-text navbar-right navbar-item logged desktop" style="color: white">¡Hola, <a href="#" class="navbar-link" style="color: white">Homero</a>!</p></li>
+                <li>
+                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item logged sign-out desktop">
+                        <span class="glyphicon glyphicon-off"></span>Salir
+                    </button>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+
+    <!-- Sign up modal -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="signup-dialog">
+        <div class="modal-dialog" role="document">
+
+        <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header signup-field">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Sólo a un paso de las mejores condiciones</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="signup-field">
+                        ¿Ya tienes una cuenta? Inicia sesión <a class="login-link" href="#">aquí</a>.
+                    </p>
+                    <p class="login-field">
+                        ¿Aún no tienes tu cuenta? Créala <a class="signup-link" href="#">aquí</a>.
+                    </p>
+                    <!-- When signing in -->
+                    <form id="signup-form" class="signup-field" role="form">
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Usuario:</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Contraseña:</label>
+                            <input type="password" class="form-control" id="pwd">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd-confirm">Confirmar contraseña:</label>
+                            <input type="password" class="form-control" id="pwd-confirm">
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox"> Recuérdame</label>
+                        </div>
+                    </form>
+
+                    <!-- When logging in -->
+                    <form id="login-form" class="login-field" role="form">
+                        <div class="form-group">
+                            <label for="email">Usuario o email:</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Password:</label>
+                            <input type="password" class="form-control" id="pwd">
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox"> Recuérdame</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-success login signup-field" data-dismiss="modal">
+                        <span class="glyphicon glyphicon-user"></span> Sign Up
+                    </button>
+                    <button type="submit" class="btn btn-success login login-field" data-dismiss="modal">
+                        <span class="glyphicon glyphicon-log-in"></span> Log in
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Search bar -->
+
+    <div id='searchcontainer' class="container input-group">
+        <div class="input-group-btn">
+        <button id='dropbtn' type="button" class="btn btn-default dropdown-toggle searchbtn dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-question fa-lg fa-fw" aria-hidden="true"></i> <span class="caret"></span></button>
+            <ul class="dropdown-menu search-dropdown-menu">
+              <li><a href="#" onclick="dropdown(1);"><i class="fa fa-ticket fa-lg fa-fw"></i> Cine </a></li>
+              <li><a href="#" onclick="dropdown(2);"><img src="img/theater.png" style="width:18px"> &nbsp; Teatro </a></li>
+              <li><a href="#" onclick="dropdown(3);"><i class="fa fa-music fa-lg fa-fw"></i> Conciertos </a></li>
+              <li><a href="#" onclick="dropdown(4);"><i class="fa fa-university fa-lg fa-fw"></i> Exposiciones/Museos </a></li>
+              <li><a href="#" onclick="dropdown(5);"><i class="fa fa-futbol-o fa-lg fa-fw"></i> Deportes </a></li>
+              <li><a href="#" onclick="dropdown(6);"><i class="fa fa-magic fa-lg fa-fw" aria-hidden="true"></i> Shows/Espectáculos </a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#" onclick="dropdown(0);"><i class="fa fa-globe fa-lg fa-fw"></i> Todas las categorías</a></li>
+        </div>
+        <input id="search-input-text" type="text" class="form-control searchbar searchbar-text" placeholder="Busca espectáculos aquí" aria-label="search-terms" onkeydown="setDefaultDrop()">
+        <div class="input-group-btn">
+            <button id='searchnow' class="btn btn-default searchbtn sendsearchbtn" type="button"><i class="fa fa-search"></i></button>
+        </div>
+    </div>
+
+    <!-- Header Carousel -->
+
+    <header id="myCarousel" class="carousel slide">
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <div class="fill" style="background-image:url('https://images.unsplash.com/photo-1459749411175-04bf5292ceea?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=698b0decc7115d06b16801d7b8291c63');"></div>
+            </div>
+            <div class="item">
+                <div class="fill" id ='violinFlip' style="background-image:url('http://cdn.paper4pc.com/images/entertainment-music-violin-musical-instrument-strings-wood-people-orchestra-wallpaper-1.jpg');"></div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('http://i.imgur.com/yny7x.jpg');"></div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Marketing Icons Section -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">
+                    Recomendados para ti
+                </h1>
+            </div>
+
+             <div class="col-md-4" style="max-width:80%;margin-left:auto; margin-right:auto">
+                 <img class='img-responsive' src="img/bosnianr_rainbows.jpg">
+                <div class="panel panel-default" style="border:none" >
+                    <div class="panel-body" style="background-color:rgb(241,241,241)">
+                        <h3 style="text-align:center;padding:0;margin:0">Bosnian Rainbows</h>
+                        <div style="margin-top:20px;vertical-align:middle">
+                            <div style="display:inline-block">
+                                <div style="background-color:rgb(221,221,221); width:70px; height:25px; font-size:16px; padding-top:3px">Mayo</div>
+                                <div style="background-color:white;width:70px; height:50px;">
+                                    <p style="font-size:16px;padding:0;margin:0">Viernes</p>
+                                    <h1 style="padding:0;margin:0; font-size:26px"> 26 </h1>
+                                </div>
+                            </div>
+                            <div style="display:inline-block; font-size:16px;">
+                            <ul class="list-unstyled" style="text-align:left">
+                                <li>
+                                  <i class="fa fa-money fa-fw"></i> Desde 23,20€</li>
+                                <li style="margin-top:10px"><i class="fa fa-music fa-fw"></i>  Indie/rock alternativo</li>
+                                <li style="margin-top:10px"><i class="fa fa-map-marker fa-fw"></i> Sala Caracol, Madrid</li>
+                            </ul>
+                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-4" style="max-width:80%;margin-left:auto; margin-right:auto">
+                 <img class='img-responsive' src="img/bosnianr_rainbows.jpg">
+                <div class="panel panel-default" style="border:none" >
+                    <div class="panel-body" style="background-color:rgb(241,241,241)">
+                        <h3 style="text-align:center;padding:0;margin:0">Bosnian Rainbows</h>
+                        <div style="margin-top:20px;vertical-align:middle">
+                            <div style="display:inline-block">
+                                <div style="background-color:rgb(221,221,221); width:70px; height:25px; font-size:16px; padding-top:3px">Mayo</div>
+                                <div style="background-color:white;width:70px; height:50px;">
+                                    <p style="font-size:16px;padding:0;margin:0">Viernes</p>
+                                    <h1 style="padding:0;margin:0; font-size:26px"> 26 </h1>
+                                </div>
+                            </div>
+                            <div style="display:inline-block; font-size:16px;">
+                            <ul class="list-unstyled" style="text-align:left">
+                                <li>
+                                  <i class="fa fa-money fa-fw"></i> Desde 23,20€</li>
+                                <li style="margin-top:10px"><i class="fa fa-music fa-fw"></i>  Indie/rock alternativo</li>
+                                <li style="margin-top:10px"><i class="fa fa-map-marker fa-fw"></i> Sala Caracol, Madrid</li>
+                            </ul>
+                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-4" style="max-width:80%;margin-left:auto; margin-right:auto">
+                 <img class='img-responsive' src="img/bosnianr_rainbows.jpg">
+                <div class="panel panel-default" style="border:none" >
+                    <div class="panel-body" style="background-color:rgb(241,241,241)">
+                        <h3 style="text-align:center;padding:0;margin:0">Bosnian Rainbows</h>
+                        <div style="margin-top:20px;vertical-align:middle">
+                            <div style="display:inline-block">
+                                <div style="background-color:rgb(221,221,221); width:70px; height:25px; font-size:16px; padding-top:3px">Mayo</div>
+                                <div style="background-color:white;width:70px; height:50px;">
+                                    <p style="font-size:16px;padding:0;margin:0">Viernes</p>
+                                    <h1 style="padding:0;margin:0; font-size:26px"> 26 </h1>
+                                </div>
+                            </div>
+                            <div style="display:inline-block; font-size:16px;">
+                            <ul class="list-unstyled" style="text-align:left">
+                                <li>
+                                  <i class="fa fa-money fa-fw"></i> Desde 23,20€</li>
+                                <li style="margin-top:10px"><i class="fa fa-music fa-fw"></i>  Indie/rock alternativo</li>
+                                <li style="margin-top:10px"><i class="fa fa-map-marker fa-fw"></i> Sala Caracol, Madrid</li>
+                            </ul>
+                            
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            
+            
+        </div>
+        <!-- /.row -->
+        
+        <a class="btn btn-lg btn-default btn-block push_button" href="#">Quiero más sugerencias!</a>
+
+        <!-- Portfolio Section -->
+        <div id='categories'>
+            <div class="col-lg-12">
+                <h2 class="page-header">Categorías</h2>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/liveshow.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/opera.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/cinema.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/expo.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/soccer.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-xs-6 col-sm-4">
+                <a href="portfolio-item.html">
+                    <img class="img-responsive img-portfolio img-hover" src="img/openmic.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+        
+    <!-- Footer -->
+    <footer class="footer" style="margin-top:50px;">
+        <div class="row row-mod" align="center">
+          <div class="col-lg-4" style="margin-top:0px">
+            <a href="#"><img style="width:150px; padding-bottom:10px" src="img/entradascomlogo.png"> </a>
+          </div>
+          <div class="col-lg-4" style="margin-top:10px; padding-bottom:10px">
+            <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+              <a href="#" style="color:black"> <i class="fa fa-facebook-square fa-3x"></i></a>
+            </div>
+            <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+                <a href="#" style="color:black"> <i class="fa fa-google-plus-square fa-3x"></i></a>
+            </div>
+            <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+                <a href="#" style="color:black"> <i class="fa fa-twitter-square fa-3x"></i></a>
+            </div>
+          </div>
+            <ul class='col-lg-4' style="list-style-type:none;margin:0;padding:0;">
+                <li class="footitem"><a href="#" style="color:black"> Condiciones de uso</a></li>
+                <li class="footitem"><a href="#" style="color:black"> Política de privacidad</a></li>
+            </ul>
+            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Leganés</p>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+    <!-- own JavaScript -->
+    <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
+
+</body>
+
+</html>
