--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -1,1 +1,6 @@
-Hello Alexxx!
+{% block content %}
+  	<form action="{{ url_for('search.search') }}" type="search" method="post" name="Search">
+            <input type="text" name="query" /><br />
+      	<p><input type="Submit"></p>
+  	</form>
+{% endblock %}
