fix bootstrap.js import

--- a/entradas_com/app/templates/base.html
+++ b/entradas_com/app/templates/base.html
@@ -12,7 +12,7 @@
 	    <meta name="author" content="">
 
 	    <!-- Bootstrap Core CSS -->
-	    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
 	    <!-- Custom CSS -->
 	    <link href="{{ url_for('static', filename='css/global.css') }}" rel="stylesheet">
@@ -35,7 +35,7 @@
 	    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
 	    <!-- Bootstrap Core JavaScript -->
-	    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+	    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 
 	    <!-- own JavaScript -->
 	    <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
