--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -27,8 +27,8 @@
             <link href="{{ url_for('static', filename='css/header-carousel.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/searchbar.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/search-cards.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/search-results.css') }}" rel="stylesheet">
+            <link href="{{ url_for('static', filename='css/search-cards.css') }}" rel="stylesheet">
 
 
         
@@ -249,7 +249,7 @@
         <div class="media">
             <div class="media-left">
                 <a href="#">
-                    <img class="media-object card-img" src="{{ url_for('static', filename='img/the-revenant-poster.jpg') }}" alt="#">
+                    <img class="media-object card-img" src="{{ url_for('static', filename='img/placeholder.jpg') }}" alt="#">
                 </a>
             </div>
             <div class="media-body">
