--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -151,7 +151,7 @@
                     <form action="{{ url_for('main.login') }}" type="login" id="login-form" class="login-field" role="form" method="post" name="Login">
                         <div class="form-group">
                             <label for="email">Usuario o email:</label>
-                            <input name="email" type="email" class="form-control" id="email">
+                            <input name="email" value="saves.get('username','')" type="email" class="form-control" id="email">
                         </div>
                         <div class="form-group">
                             <label for="pwd">Password:</label>
